force-app/main/default/objects/Authors__c/Authors__c.object-meta.xml
<CustomObject>
    <label>Authors</label>
    <nameField>
        <label>Authors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>