force-app/main/default/objects/Authors__c/fields/Author_COB__c.field-meta.xml
<CustomField>
    <fullName>Author_COB__c</fullName>
    <label>Author COB</label>
    <length>30</length>
    <type>Text</type>
</CustomField>