force-app/main/default/objects/Authors__c/fields/Author_image__c.field-meta.xml
<CustomField>
    <fullName>Author_image__c</fullName>
    <label>Author image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>