force-app/main/default/objects/Authors__c/fields/Author_YOB__c.field-meta.xml
<CustomField>
    <fullName>Author_YOB__c</fullName>
    <label>Author YOB</label>
    <type>Date</type>
</CustomField>